// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CancelAcceptButtons /> renders correctly disabled CancelAcceptButtons 1`] = `
<Fragment>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="kubevirt-cancel-accept-buttons"
    disabled={false}
    onClick={[Function]}
  >
    <Icon
      name="close"
      type="pf"
    />
  </Button>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="kubevirt-cancel-accept-buttons"
    disabled={true}
    onClick={[Function]}
  >
    <Icon
      name="check"
      type="fa"
    />
  </Button>
</Fragment>
`;

exports[`<CancelAcceptButtons /> renders correctly enabled CancelAcceptButtons 1`] = `
<Fragment>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="default"
    className="kubevirt-cancel-accept-buttons"
    disabled={false}
    onClick={[Function]}
  >
    <Icon
      name="close"
      type="pf"
    />
  </Button>
  <Button
    active={false}
    block={false}
    bsClass="btn"
    bsStyle="primary"
    className="kubevirt-cancel-accept-buttons"
    disabled={false}
    onClick={[Function]}
  >
    <Icon
      name="check"
      type="fa"
    />
  </Button>
</Fragment>
`;
